fix pieces not showing up

--- a/Object-Oriented_Programming/connect-four-oo/connect4.css
+++ b/Object-Oriented_Programming/connect-four-oo/connect4.css
@@ -15,13 +15,13 @@
   border-radius: 50%;
 }
 
-.piece.p1 {
+/* .piece.player1 {
   background-color: red;
 }
 
-.piece.p2 {
+.piece.player2 {
   background-color: blue;
-}
+} */
 
 /* column-top is table row of clickable areas for each column */
 
